--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "generators"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "convo",
+    "openapi",
+    "cloudfunctions"
   ],
   "scripts": {
     "lint": "node_modules/ejs-lint/cli.js generators/app/templates/*.ejs"
@@ -18,6 +21,6 @@
   "devDependencies": {
     "ejs-lint": "^0.3.0",
     "serverless": "^1.30.1",
-    "yo": "^2.0.5"
+     "yo": "^2.0.5"
   }
 }
