--- a/package.json
+++ b/package.json
@@ -13,15 +13,26 @@
     "cloudfunctions"
   ],
   "scripts": {
-    "lint": "node_modules/ejs-lint/cli.js generators/app/templates/*/*/*.ejs"
+    "lint": "node_modules/ejs-lint/cli.js generators/app/templates/*/*/*.ejs",
+    "test": "node_modules/mocha/bin/mocha --timeout 5000 test/integration/*/*/*.js",
+    "coverage": "node_modules/mocha/bin/mocha --require mocha-lcov-reporter --reporter mocha-lcov-reporter --timeout 5000 test/integration/*/*/*.js",
+    "publish-coverage": "cat stage/coverage.lcov | node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
-    "convo-node": "^0.0.2",
+    "voca": "^1.4.0",
+    "yaml": "^1.0.0-rc.7",
     "yeoman-generator": "^1.0.0"
   },
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "ejs-lint": "^0.3.0",
+    "mocha": "^5.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "serverless": "^1.30.1",
      "yo": "^2.0.5"
-  }
+  },
+  "engines": {
+    "node": ">= 6.0.0"
+  },
+  "license": "MIT"
 }
