Rename conversation to query following Convo spec reformatting.

--- a/test/fixtures/convo.yaml
+++ b/test/fixtures/convo.yaml
@@ -9,7 +9,7 @@ info:
     name: Cliffano Subagio
     url: http://blog.cliffano.com
     email: blah@cliffano.com
-conversations:
+queries:
   greetings:
     replies:
       en-au:
