--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "publish-coverage": "cat stage/coverage.lcov | node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
+    "convo-node": "^0.0.3",
     "lodash": "^4.17.11",
     "voca": "^1.4.0",
     "yaml": "^1.0.0-rc.7",
@@ -30,7 +31,7 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "serverless": "^1.30.1",
-     "yo": "^2.0.5"
+    "yo": "^2.0.5"
   },
   "engines": {
     "node": ">= 6.0.0"
